<resources>
    <string name="app_name">Meme Maker</string>
    <string name="meme_generator_activity_name">Meme Generator</string>
    <string name="str_memes">Memes</string>
    <string name="str_saved_memes">Saved Memes</string>
    <string name="str_settings">Settings</string>
    <string name="str_share_app">Share App</string>
    <string name="str_more_apps">More Apps</string>
    <string name="str_rate_app">Rate App</string>
    <string name="str_about">About</string>
    <string name="str_email">Email</string>
    <string name="str_follow_us">Follow us</string>
    <string name="cd_todo">todo</string>
    <string name="drawer_opened">drawer opened</string>
    <string name="drawer_closed">drawer closed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_save_meme_to_share">Please save meme to share</string>
    <string name="str_share_meme">Share Meme</string>
    <string name="str_add_text">+ Add Text</string>
    <string name="str_rotate">Rotate</string>
    <string name="str_flip_horizontal">Flip Horizontal</string>
    <string name="str_flip_vertical">Flip Vertical</string>
    <string name="str_text_color">Text Color</string>
    <string name="str_outline_color">Outline Color</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_select">Select</string>
    <string name="str_added_to_favourites">Added To Favourites</string>
    <string name="str_removed_from_favourites">Removed From Favourites</string>
    <string name="str_undo">Undo</string>
    <string name="str_downloading_meme">Downloading meme…</string>
    <string name="str_please_wait">Please wait</string>
    <string name="str_please_wait_">Please wait…</string>
    <string name="str_default_caption">TAP HERE TO ADD TEXT</string>
    <string name="str_custom_meme">Custom Meme</string>
    <string name="str_save_to_device">Save To Device</string>
    <string name="str_save_as_editable_template">Save As Editable Template</string>
    <string name="str_meme_saved_successfully">Meme Saved Successfully</string>
    <string name="str_failed_to_save_meme">Failed To Save Meme</string>
    <string name="str_saved_templates">Saved Templates</string>
    <string name="str_communicate">Communicate</string>
    <string name="str_file_already_exist">File already exist</string>
    <string name="str_problem_loading_meme">Problem loading meme</string>
    <string name="str_camera">Camera</string>
    <string name="str_gallery_amp_other_sources"><![CDATA[Gallery & other sources]]></string>
    <string name="str_delete">Delete</string>
    <string name="str_select_all">Select All</string>

    <string name="str_storage_permission_denied">Storage Permissions Denied. Memes cannot be saved. Allow storage permissions from settings</string>
    <string name="str_storage_permission_denied_for_custom_fonts">Storage Permissions Denied. Custom Font cannot be loaded. Allow storage permissions from settings</string>
    <string name="str_storage_permission_required_for_storage">Storage Permissions Required For Custom Fonts</string>

    <string name="str_storage_permission_required">Storage Permissions Required For Saved Memes</string>
    <string name="str_storage_permission_requires_for_saved_memes">Storage Permissions Required For Saved Memes. Allow storage permissions from settings</string>
    <string name="str_font_manager">Font Manager</string>
    <string name="str_custom_font">Add font</string>
    <string name="str_delete_custom_font">Delete custom font</string>
    <string name="str_start_download">Start Download</string>
    <string name="str_cancel_download">Cancel Download</string>
    <string name="all_memes_downloaded">Download Successful</string>
    <string name="sr_download_failed">Download Failed : %1$s</string>
    <string name="str_download_started">Download Started</string>
    <string name="str_waiting_for_network">Waiting for network</string>
    <string name="str_download_progress">Download Progress : %1$d%%</string>
    <string name="str_download_cancelled">Download Cancelled</string>
    <string name="str_download_memes">Download Memes</string>
    <string name="str_start_download_again">Start Download Again</string>
    <string name="file_corrupted">File Corrupted</string>
    <string name="str_external_storage_busy">External storage busy</string>
    <string name="str_custom_font_added_successfully">Custom Font Added Successfully</string>
    <string name="str_custom_font_deleted_successfully">Custom Font Deleted Successfully</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="str_not_valid_font_file">Not valid font file</string>
    <string name="str_recently_used_colors">Recently used colors:</string>
    <string name="exit_dilaog_message">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dont_show_this_dialog_again">Don\'t show this again</string>
    <string name="str_text_size">Text Size</string>
    <string name="str_outline_size">Outline Size</string>
    <string name="str_max_lines">Max Lines</string>
    <string name="str_ok">OK</string>
    <string name="str_crop">Crop</string>
    <string name="str_contact_us">Contact us</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_remove_ads">Remove Ads</string>
    <string name="str_get_an_ad_free_experience_for_lifetime">Get an ad-free experience for lifetime</string>
    <string name="str_custom_fonts">Custom Fonts</string>
    <string name="str_load_your_own_fonts_and_apply_them_to_memes">Load your own fonts and apply them to memes</string>
    <string name="str_download_all_memes">Download All Memes</string>
    <string name="str_continue_creating_memes_without_internet">Continue creating memes without internet</string>
    <string name="str_full_screen_mode">Full Screen Mode</string>
    <string name="str_hide_status_bar">Hide status bar</string>
    <string name="str_dark_mode">Dark Mode</string>
    <string name="str_save_battery_by_enabling_the_dark_mode">Save battery by enabling the dark mode</string>
    <string name="str_check_how_this_app_concerns">Check how this app concerns</string>
    <string name="str_font">Font</string>
    <string name="str_no_products_found">No Products Found</string>
    <string name="str_purchase">Purchase</string>
    <string name="str_payable_amount">Payable Amount: </string>
    <string name="str_all_memes">All</string>
    <string name="str_favourite">Favourite</string>
    <string name="str_random">Random</string>
    <string name="str_saving">Saving…</string>
    <string name="str_saved">Saved</string>
    <string name="str_sorry_try_again">Sorry, try again</string>
    <string name="str_empty">Empty</string>
    <string name="str_failed_to_save_image">Failed to save Image</string>
    <string name="str_delete_confirmation">Are you sure you want to delete?</string>
    <string name="str_deleting">Deleting…</string>
    <string name="str_deleted_successfully">Deleted Successfully</string>
    <string name="str_redo">Redo</string>
    <string name="str_save">Save</string>
    <string name="str_later">Later</string>
    <string name="str_share">Share</string>
    <string name="str_tap_on_heart_to_add_a_template_to_favourites">Tap on heart to add a template to favourites</string>
    <string name="str_new">New</string>
    <string name="str_loading_please_wait">Loading, please wait</string>
    <string name="str_something_went_wrong">Something went wrong</string>
    <string name="str_retry">Retry</string>
    <string name="str_leave">Leave</string>
    <string name="str_enter_valid_name">Please Enter Valid Meme Name</string>
    <string name="str_uploading">Uploading meme…</string>
    <string name="str_uploaded_successfully">Uploaded successfully</string>
    <string name="str_new_memes_updated">New Memes Updated</string>
    <string name="str_purchase_successful">Purchase Successful</string>
    <string name="str_ad_free_experience">Ad-free experience</string>
    <string name="str_go_premium">GO PREMIUM</string>
    <string name="str_go_premium_">Go Premium</string>
    <string name="str_priority_updates">Priority updates</string>
    <string name="str_support_the_developer">Support the developer</string>
    <string name="str_let_s_go">Let\'s Go</string>
    <string name="str_purchase_unsuccessful">Purchase Unsuccessful</string>
    <string name="str_purchase_acknoweledgement_failed">Purchase Acknowledgement Failed</string>
    <string name="str_billing_service_disconnected">"Billing service disconnected. "</string>
    <string name="str_remove_ads_product_not_found">Remove ads product not found</string>
    <string name="str_check_playstore_login">. Check PlayStore login.</string>
    <string name="choose_one">Choose one</string>
    <string name="share_app_message">Grab this amazing and easy to use Meme Maker, here: </string>
    <string name="str_no_memes">No memes</string>
    <string name="str_how_you_feel_about_this_app">How you feel about this App?</string>
    <string name="str_happy">Happy</string>
    <string name="str_confused">Confused</string>
    <string name="str_unhappy">UnHappy</string>
    <string name="str_if_you_are_unsure_about_anything_then_please_let_us_know">If you are unsure about anything, then please let us know!</string>
    <string name="str_contact_our_team">Contact our team</string>
    <string name="str_meme_maker_contact">Meme Maker Contact</string>
    <string name="str_unhappy_desc">Can you please share what made you unhappy? so that we can fix it and make your experience a happy one</string>
    <string name="str_happy_desc">We would love to know how we can make Incognito Browser even better. And would really appreciate if you left a review on Google Play Store</string>
    <string name="str_write_a_review">Write a review</string>
    <string name="str_tell_your_friend">Tell your friend</string>
    <string name="str_tweet_about_us">Tweet about us!</string>
    <string name="str_post_on_facebook">Post on Facebook</string>
    <string name="str_is_amazing">is amazing</string>
    <string name="str_no_saved_memes">No Saved Memes</string>
    <string name="str_no_saved_templates">No Saved Templates</string>
    <string name="str_no_new_memes">No New Memes</string>


</resources>